# jiaodai

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yml  release.yml
.well-known/: agent.json
crates/jiaodai-api/: Cargo.toml
crates/jiaodai-api/src/: agent.rs  lib.rs  middleware.rs  routes.rs  state.rs  web_ui.rs
crates/jiaodai-auth/: Cargo.toml
crates/jiaodai-auth/src/: account.rs  event.rs  identity.rs  jwt.rs  lib.rs  phone.rs  sms.rs
crates/jiaodai-chain/: Cargo.toml
crates/jiaodai-chain/src/: contract.rs  engine.rs  lib.rs  merkle.rs  scheduler.rs
crates/jiaodai-cli/: Cargo.toml
crates/jiaodai-cli/src/: main.rs
crates/jiaodai-core/: Cargo.toml
crates/jiaodai-core/src/: error.rs  lib.rs  models.rs  traits.rs
crates/jiaodai-match/: Cargo.toml
crates/jiaodai-match/src/: engine.rs  lib.rs  passive.rs  search.rs
crates/jiaodai-scene/: Cargo.toml
crates/jiaodai-scene/src/: capsule.rs  crush.rs  lib.rs  will.rs
crates/jiaodai-seal/: Cargo.toml
crates/jiaodai-seal/src/: certificate.rs  crypto.rs  engine.rs  event.rs  hash_store.rs  lib.rs  openlink.rs  shamir.rs  vault.rs
crates/jiaodai-unseal/: Cargo.toml
crates/jiaodai-unseal/src/: checkers.rs  engine.rs  event.rs  lib.rs  registry.rs  state_machine.rs
docs/: agent-guide.md  deployment.md  user-guide.md
docs/frontend/: README.md
