[package]
name = "jiaodai-chain"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Blockchain timestamp service for the Jiaodai platform: Merkle tree, L2 interaction, proof verification"

[dependencies]
jiaodai-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
