[package]
name = "jiaodai-match"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Mutual-match engine for the Jiaodai platform: bidirectional seal matching"

[dependencies]
jiaodai-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
