[package]
name = "jiaodai-seal"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Sealing core for the Jiaodai platform: encryption, hashing, certificate generation"

[dependencies]
jiaodai-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
aes-gcm = { workspace = true }
rand = { workspace = true }
tokio = { workspace = true }
